--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -1,3 +1,15 @@
-<h1>{{ name }} ({{ symbol }})</h1>
-<p>Price: {{ price }}</p>
-<p>Change: {{ change }} ({{ change_pct }}%)</p>
+{% extends 'base.html' %}
+
+<form method="GET" action="{% url 'stock_info' symbol='' %}">
+    <input type="text" name="symbol" placeholder="Enter stock symbol">
+    <button type="submit">Submit</button>
+  </form>
+  
+  {% if symbol %}
+    <p>Stock Symbol: {{ symbol }}</p>
+    <p>Stock Name: {{ name }}</p>
+    <p>Stock Price: {{ price }}</p>
+    <p>Stock Change: {{ change }}</p>
+    <p>Stock Change Percentage: {{ change_pct }}</p>
+  {% endif %}
+  
