--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -1,28 +1,3 @@
-
-<form method="GET" action="{% url 'stock_info' symbol='' %}">
-    <input type="text" name="symbol" placeholder="Enter stock symbol">
-    <button type="submit">Submit</button>
-  </form>
-  
-  {% if symbol %}
-    <p>Stock Symbol: {{ symbol }}</p>
-    <p>Stock Name: {{ name }}</p>
-    <p>Stock Price: {{ price }}</p>
-    <p>Stock Change: {{ change }}</p>
-    <p>Stock Change Percentage: {{ change_pct }}</p>
-  {% endif %}
-
-  <form method="POST">
-    {% csrf_token %}
-    <label for="symbol">Enter stock symbol:</label>
-    <input type="text" name="symbol" id="symbol">
-    <button type="submit">Submit</button>
-</form>
-
-{% if stock_data %}
-    <h2>{{ stock_data.symbol }}</h2>
-    <p>Name: {{ stock_data.name }}</p>
-    <p>Price: {{ stock_data.price }}</p>
-    <p>Change: {{ stock_data.change }}</p>
-    <p>Change %: {{ stock_data.changesPercentage }}</p>
-{% endif %}
+<h1>{{ name }} ({{ symbol }})</h1>
+<p>Price: {{ price }}</p>
+<p>Change: {{ change }} ({{ change_pct }}%)</p>
