--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -6,6 +6,9 @@
   border: 2px solid #ccc;
   border-radius: 5px;
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .stock-info h1 {
