--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -1,35 +1,4 @@
-<head>
-    <style type="text/css">
-    .stock-info {
-  background-color: #f7f7f7;
-  padding: 10px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.stock-info h1 {
-  font-size: 36px;
-  margin: 0;
-}
-
-.stock-info p {
-  font-size: 24px;
-  margin: 10px 0;
-}
-
-.stock-info p:last-child {
-  margin-bottom: 0;
-}
-
-    </style>
-</head>
-
-<div class="stock-info">
-    <h1>{{ name }} ({{ symbol }})</h1>
-    <p>Price: {{ price }}</p>
-    <p>Change: {{ change }} ({{ change_pct }}%)</p>
-  </div>
+<h1>{{ symbol }}</h1>
+<p>{{ name }}</p>
+<p>Price: {{ price }}</p>
+<p>Change: {{ change }} ({{ change_pct }})</p>
