Functional homepage that has links to bring you to other HTML pages. No formatting has been done.

--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -4,9 +4,15 @@
   <dl>
     <dt>Username</dt>
     <dd>{{ user.username }}</dd>
-    <dt>User ID</dt>
-    <dd>{{ user.user_id }}</dd>
     <dt>Email</dt>
     <dd>{{ user.email }}</dd>
+    <dt>First Name</dt>
+    <dd>{{ user.first_name }}</dd>
+    <dt>Last Name</dt>
+    <dd>{{ user.last_name }}</dd>
+    <dt>User ID</dt>
+    <dd>{{ user.user_id }}</dd>
+    <dt>Date Created</dt>
+    <dd>{{ user.date_created }}</dd>
   </dl>
 {% endblock  %}
