--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -6,19 +6,19 @@
         <tr>
             <th>Username</th>
             <th>User ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
             <th>Email</th>
+            <th>Account Type</th>
         </tr>
     </thead>
     <tbody>
         {% for user in accounts %}
         <tr>
-            <td>{{ user.username }}</td>
+            <td>
+                <a href="{% url 'accounts:detail' user.id %}">{{ user.username }}</a>
+            </td>
             <td>{{ user.user_id }}</td>
-            <td>{{ user.first_name }}</td>
-            <td>{{ user.last_name }}</td>
             <td>{{ user.email }}</td>
+            <td>{{ user.account }}</td>
         </tr>
         {% endfor %}
     </tbody>
