--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,37 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<a href="{% url 'movies:index' %}">Movies</a>
-<a href="{% url 'accounts:index' %}">Accounts</a>
-<a href="{% url 'financials_index' %}">Financials</a>
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Financial Web Application - Home </title>
+    <style> 
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        a {
+            color: blue;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Welcome to Our Homepage</h1>
+    <p>Other Pages:</p>
+    <ul>
+        <a href="{% url 'movies:index' %}">Movies</a>
+        <a href="{% url 'accounts:index' %}">Accounts</a>
+        <a href="{% url 'financials_index' %}">Financials</a>
+    </ul>
+</body>
+
+</html>
 {% endblock  %}
