--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -1,5 +1,7 @@
 <h1>{{ symbol }}</h1>
 <p>{{ name }}</p>
 <p>Price: {{ price }}</p>
+<p>Day Low: {{ dayLow }}</p>
+<p>Day High: {{ dayHigh }}</p>
 <p>Change: {{ change }} ({{ change_pct }})</p>
 <a href="http://127.0.0.1:8000/financials/stock_chart/{{ symbol }}">Chart</a>
