--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -3,5 +3,7 @@
 <p>Price: {{ price }}</p>
 <p>Day Low: {{ dayLow }}</p>
 <p>Day High: {{ dayHigh }}</p>
+<p>Year Low: {{ yearLow }}</p>
+<p>Year High: {{ yearHigh }}</p>
 <p>Change: {{ change }} ({{ change_pct }})</p>
 <a href="http://127.0.0.1:8000/financials/stock_chart/{{ symbol }}">Chart</a>
