Added exchange and market cap
Added exchange and market cap to the financials page.

--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -6,4 +6,6 @@
 <p>Day High: {{ dayHigh }}</p>
 <p>Year Low: {{ yearLow }}</p>
 <p>Year High: {{ yearHigh }}</p>
+<p>Market Cap: {{ marketCap }}</p>
+<p>Exchange: {{ exchange }}</p>
 <a href="http://127.0.0.1:8000/financials/stock_chart/{{ symbol }}">Chart</a>
