--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -1,12 +1,23 @@
 <style>
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        width: 100%;
+        max-width: 1000px;
+        margin: 0 auto;
+    }
+
     h1 {
         text-align: center;
-        font-size: 48px;
+        font-size: 72px;
+        flex-basis: 100%;
     }
 
     p {
         text-align: center;
-        font-size: 24px;
+        font-size: 36px;
         margin: 10px 0;
     }
 
@@ -24,58 +35,46 @@
 
     .detail-left {
         text-align: left;
-        flex: 1;
     }
 
     .detail-right {
         text-align: right;
-        flex: 1;
-    }
-
-    a {
-        display: block;
-        text-align: center;
-        font-size: 24px;
-        margin-top: 20px;
     }
 
     .enlarge {
-        font-size: 72px;
+        font-size: 48px;
     }
 
-    .container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        max-width: 1000px;
-        margin: 0 auto;
-    }
-
-    .left-side {
+    .left-column {
         flex: 1;
+        text-align: center;
+        margin-right: 20px;
     }
 
-    .right-side {
+    .right-column {
         flex: 1;
-        text-align: right;
+        text-align: center;
+        margin-left: 20px;
+    }
+
+    .center-column {
+        flex-basis: 100%;
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .center-column p {
+        margin: 10px;
     }
 </style>
 
 <div class="container">
-    <div class="left-side">
+    <div class="left-column">
         <h1 class="enlarge">{{ symbol }}</h1>
         <p class="emphasis">{{ name }}</p>
-        <div class="details">
-            <p class="detail-left">Price:</p>
-            <p class="enlarge detail-right">{{ price }}</p>
-        </div>
-        <div class="details">
-            <p class="detail-left">Change:</p>
-            <p class="detail-right">{{ change }} ({{ change_pct }})</p>
-        </div>
+        <p class="enlarge">{{ price }}</p>
     </div>
-    <div class="right-side">
+    <div class="right-column">
         <div class="details">
             <p class="detail-left">Day Low:</p>
             <p class="detail-right">{{ dayLow }}</p>
@@ -87,8 +86,3 @@
         <div class="details">
             <p class="detail-left">Year Low:</p>
             <p class="detail-right">{{ yearLow }}</p>
-        </div>
-        <div class="details">
-            <p class="detail-left">Year High:</p>
-            <p class="detail-right">{{ yearHigh }}</p>
-        </div
