--- a/financials/templates/stock_chart.html
+++ b/financials/templates/stock_chart.html
@@ -1,4 +1,6 @@
 {% block content %}
+<div style="text-align: center;">
     <h1>{{ symbol }} Candlestick Chart</h1>
     <div>{{ chart_div|safe }}</div>
+</div>
 {% endblock %}
