--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -60,13 +60,13 @@
 <div class="container">
     <div class="left-container">
         <div class="data">
-            <p>Price:</p>
+            <b>Price:</b>
             <p>Change:</p>
             <p>Day Low:</p>
             <p>Day High:</p>
         </div>
         <div class="data">
-            <p>{{ price }}</p>
+            <b>{{ price }}</b>
             <p>{{ change }} ({{ change_pct }})</p>
             <p>{{ dayLow }}</p>
             <p>{{ dayHigh }}</p>
