--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -67,7 +67,7 @@
         </div>
         <div class="data">
             <b>{{ price }}</b>
-            <p>{{ change }} ({{ change_pct"&#37;" }})</p>
+            <p>{{ change }} ({{ change_pct }})</p>
             <p>{{ dayLow }}</p>
             <p>{{ dayHigh }}</p>
         </div>
