--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -60,13 +60,13 @@
 <div class="container">
     <div class="left-container">
         <div class="data">
-            <b>Price:</b>
-            <p>Change:</p>
-            <p>Day Low:</p>
-            <p>Day High:</p>
+            <strong>Price:</strong>
+            <b>Change:</b>
+            <b>Day Low:</b>
+            <b>Day High:</b>
         </div>
         <div class="data">
-            <b>{{ price }}</b>
+            <strong>{{ price }}</strong>
             <p>{{ change }} ({{ change_pct }}&#37;)</p>
             <p>{{ dayLow }}</p>
             <p>{{ dayHigh }}</p>
@@ -75,10 +75,10 @@
 
     <div class="right-container">
         <div class="data">
-            <p>Year Low:</p>
-            <p>Year High:</p>
-            <p>Market Cap:</p>
-            <p>Exchange:</p>
+            <b>Year Low:</b>
+            <b>Year High:</b>
+            <b>Market Cap:</b>
+            <b>Exchange:</b>
         </div>
         <div class="data">
             <p>{{ yearLow }}</p>
