--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -60,13 +60,13 @@
 <div class="container">
     <div class="left-container">
         <div class="data">
-            <strong>Price:</strong>
+            <b>Price:</b>
             <b>Change:</b>
             <b>Day Low:</b>
             <b>Day High:</b>
         </div>
         <div class="data">
-            <strong>{{ price }}</strong>
+            <b>{{ price }}</b>
             <p>{{ change }} ({{ change_pct }}&#37;)</p>
             <p>{{ dayLow }}</p>
             <p>{{ dayHigh }}</p>
