--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -42,6 +42,10 @@
         font-size: 24px;
     }
 
+    .data strong {
+        font-weight: bold;
+    }
+
     a {
         display: block;
         text-align: center;
@@ -60,10 +64,10 @@
 <div class="container">
     <div class="left-container">
         <div class="data">
-            <p>Price:</p>
-            <p>Change:</p>
-            <p>Day Low:</p>
-            <p>Day High:</p>
+            <p><strong>Price:</strong></p>
+            <p><strong>Change:</strong></p>
+            <p><strong>Day Low:</strong></p>
+            <p><strong>Day High:</strong></p>
         </div>
         <div class="data">
             <p>{{ price }}</p>
@@ -75,10 +79,10 @@
 
     <div class="right-container">
         <div class="data">
-            <p>Year Low:</p>
-            <p>Year High:</p>
-            <p>Market Cap:</p>
-            <p>Exchange:</p>
+            <p><strong>Year Low:</strong></p>
+            <p><strong>Year High:</strong></p>
+            <p><strong>Market Cap:</strong></p>
+            <p><strong>Exchange:</strong></p>
         </div>
         <div class="data">
             <p>{{ yearLow }}</p>
