added dollar signs

--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -70,10 +70,10 @@
             <p><strong>Day High:</strong></p>
         </div>
         <div class="data">
-            <p>{{ price }}</p>
+            <p>&#36;{{ price }}</p>
             <p>{{ change }} ({{ change_pct }}&#37;)</p>
-            <p>{{ dayLow }}</p>
-            <p>{{ dayHigh }}</p>
+            <p>&#36;{{ dayLow }}</p>
+            <p>&#36;{{ dayHigh }}</p>
         </div>
     </div>
 
@@ -85,8 +85,8 @@
             <p><strong>Exchange:</strong></p>
         </div>
         <div class="data">
-            <p>{{ yearLow }}</p>
-            <p>{{ yearHigh }}</p>
+            <p>&#36;{{ yearLow }}</p>
+            <p>&#36;{{ yearHigh }}</p>
             <p>{{ marketCap }}</p>
             <p>{{ exchange }}</p>
         </div>
