Quick Change Percentage Fix

--- a/financials/templates/stock_info.html
+++ b/financials/templates/stock_info.html
@@ -71,7 +71,7 @@
         </div>
         <div class="data">
             <p>&#36;{{ price }}</p>
-            <p>{{ change }} ({{ change_pct }}&#37;)</p>
+            <p>{{ change }} ({{ changesPercentage }}&#37;)</p>
             <p>&#36;{{ dayLow }}</p>
             <p>&#36;{{ dayHigh }}</p>
         </div>
