altered title for index2

--- a/financials/templates/index2.html
+++ b/financials/templates/index2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Search</title>
+    <title>Search Company</title>
     <style>
         form {
             display: flex;
